--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-gyazo-api",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Node-RED nodes for Gyazo API",
   "main": "nodes/get/get.js",
   "repository": {
@@ -13,7 +13,8 @@
   },
   "node-red": {
     "nodes": {
-      "gyazo-get": "./nodes/get/get.js",
+      "gyazo-get-list": "./nodes/get-list/get-list.js",
+      "gyazo-get-image": "./nodes/get-image/get-image.js",
       "gyazo-config": "./nodes/config/config.js",
       "gyazo-upload": "nodes/upload/upload.js"
     }
